@@ -7,6 +7,7 @@ Post badge external urls are now nofollow - CHANGED
 Slider carousel images now use thumbnail size for consistency - CHANGED
 GD listings widget now has option to filter by default_category only - ADDED
 GD listings widget now has option to filter post IDs - ADDED
+HTML custom field stripping html tags from default value - FIXED
 
 v2.0.0.43
 Post badge and is_empty check not working in some cases - FIXED
